<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/createpost_title_field"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="-50dp"
            android:background="@drawable/border"
            android:hint="Title"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/createpost_content_field"
            android:layout_width="350dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/border"
            android:hint="Content"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textSize="20sp" />

        <!--<LinearLayout
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Due Date"
                android:textColor="@color/duedatered"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="1dp"/>

            <TextView
                android:id="@+id/duedateView"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="35dp"
                android:background="@drawable/border"
                android:text="DD/MM/YYYY"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="2dp" />
        </LinearLayout>-->
        <Button
            android:id="@+id/createpost_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/pink"
            android:fontFamily="serif-monospace"
            android:minWidth="190dp"
            android:minHeight="60dp"
            android:text="CREATE"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/createpost_discard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/green_100"
            android:fontFamily="serif-monospace"
            android:minWidth="190dp"
            android:minHeight="60dp"
            android:text="DISCARD"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>