<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_home"
        android:title="home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_foreground"
        />
    <item
        android:id="@+id/menu_create_post"
        android:icon="@android:drawable/ic_menu_add"
        android:title="create_post"
        app:showAsAction="always" />
    <item android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile_foreground"
        android:title="profile"
        app:showAsAction="always"
        />
    <item android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout_foreground"
        android:title="Logout"
        app:showAsAction="always"
        />
</menu>