<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="40dp"
    android:textAlignment="center"
    tools:context=".EditUserProfile">

    <TextView
        android:id="@+id/edit_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="serif-monospace"
        android:text="Edit Profile"
        android:textColor="#D84315"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    <!-- Circular Image View  -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_profile_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_profile"
        android:layout_marginTop="60dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        />
    <TextView
        android:id="@+id/edit_user_pic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="280dp"
        android:fontFamily="serif-monospace"
        android:text="Edit Profile Picture"
        android:textColor="#D84315"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="330dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/font_color"
        app:boxStrokeErrorColor="@color/error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColorHint="#795548"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="10dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/font_color"
        app:boxStrokeErrorColor="@color/error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColorHint="#795548"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/green_100"
        />

    <Button
        android:id="@+id/cancel_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/pink"
        />

</RelativeLayout>