...
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/user_profile_edit_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:minHeight="60dp"
        android:text="@string/edit"
        android:fontFamily="serif-monospace"
...
