<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="60dp"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="60dp"
            android:fontFamily="serif-monospace"
            android:text="@string/login_text"
            android:textColor="#D84315"
            android:textSize="58sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/font_color"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/font_color"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:textColorHint="#795548"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/green_100"
            android:fontFamily="serif-monospace"
            android:minWidth="100dp"
            android:minHeight="60dp"
            android:text="@string/login_text"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="Not Registered?"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_registerhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Register here"
                android:textColor="@color/magenta_100"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>