<resources>
    <string name="app_name">Deer Diary</string>
    <string name="deer_diary">Deer Diary</string>
    <string name="deer_logo">deer_logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerButton">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_text">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_here">Login Here</string>
    <string name="login_text">Login</string>
    <string name="create_post">Create Post</string>
    <string name="edit">Edit</string>
    <string name="return_to_menu">Return</string>
    <string name="name_placeholder">LastName, FirstName</string>

    <string-array name="sort_type">
        <item>Date</item>
        <item>Title</item>
    </string-array>
</resources>